# simd-cv-op

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_android.sh  build_mac_and_run_test.sh  gen_xcode_project.sh  run.sh  run_android_test.sh
cmake/: platform.cmake
cv/arm/: arm_cv.hpp  bgr2gray.cpp  transpose.cpp
note/: bgr2gray.md  dwconv.md
op/arm/: arm_activation.hpp  arm_op.hpp  conv.cpp  depthwise_conv.cpp  dwconv3x3.cpp  dwconv3x3_asm.cpp  dwconv3x3_intrinsics.cpp  relu.cpp
pytorch_example/mnist_dwconv/: main.py
test/: CMakeLists.txt  main.cpp  test_common.cpp  test_common.hpp  test_utils.cpp  test_utils.hpp
test/cv/: bgr2gray_test.cpp
test/op/: dwconv3x3_test.cpp  naive_dwconv_test.cpp
